--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <h1>Hello from HTML!</h1>
   <div id="app">
     <p>{{ greeting }}</p>
-    <p>{{ greeting }}</p>
-    <p>{{ greeting }}</p>
-    <p>{{ greeting }}</p>
+    
     <p>{{ name }}</p>
     
     <button v-on:click="changeGreeting()">Click me!</button>
+
+    <p>Enter your name: <input type="text" v-model="name"></p>
+
   </div>
 </body>
 </html>
