add basic toggle functionality

--- a/calculator.html
+++ b/calculator.html
@@ -8,9 +8,9 @@
 <body>
   <div id="app">
     {{ message }}
-    <div>1st number: <input v-model="number1" type="text"></div>
-    <div>2nd number: <input v-model="number2" type="text"></div>
-    <div>3rd number: <input v-model="number3" type="text"></div>
+    <div>1st number: <input v-model.number="number1" type="number"></div>
+    <div>2nd number: <input v-model="number2" type="number"></div>
+    <div>3rd number: <input v-model="number3" type="number"></div>
     <div><button v-on:click="computeSum()">Compute sum</button></div>
     <p>The sum is: {{ sum }}</p>
 
