add new fruit to array

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <button v-on:click="toggleInfo()">Toggle Info</button>
     <p v-if="showInfo">Additional hidden information</p>
 
+    <p><input type="text" v-model="newFruit"></p>
+    <p><button v-on:click="addFruit()">Add a new fruit</button></p>
+    
     <!-- fruits.each do |fruit| -->
     <div v-for="fruit in fruits">
       A good fruit is: {{ fruit }}
